--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,66 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+html {
+    margin: 0;
+    height: auto;
+}
 
 body {
-    background-color: rgb(253, 230, 222);
+    background-color:darkslategray;
     display: flex;
-    align-content: center;
+    font-family: Roboto;
+    color: whitesmoke;
+    font-weight: bold;
+    
+}
+
+#header1 {
+    text-align: center;
+    font-family: 'Press Start 2P', cursive;
+    color: whitesmoke
 }
 
 #main {
     margin: auto;
     display: flex;
-    flex-direction: column;
-    align-content: center;
-    
+    flex-direction: column;   
+    max-width: 700px;
+
 }
 
 .gameContainer {
-    width: 500px;
     height: 150px;
     display: flex;
+    justify-content: space-evenly;
     
 }
 
+#computerChoice {
+    display: flex;
+    justify-content: center;
+    height: 150px;
+    padding: 20px;
+}
+
 .resultsContainer {
-    width: 500px;
     height: 100px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
-button {
+.gameButton {
+    border-radius: 50px;
+}
+
+.gameButton:hover {
+    transform: scale(1.1);
+    transition: all .3s;
+}
+
+.resetButton {
     flex: 1;
     height: 100px;
     font-family: Roboto;
@@ -39,7 +70,7 @@ button {
     border-style: revert;
     border-radius: 10px;
     border-width: 10px;
-    
+    margin-top: 20px;
 }
 
 #btnRock {
