--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,10 @@ body {
     display: flex;
     flex-direction: column;   
     max-width: 700px;
+    border-style: solid;
+    border-color: yellow;
+    box-shadow: 0 0 10px yellowgreen;
+    border-radius: 10px;
 
 }
 
@@ -58,33 +62,40 @@ body {
 .gameButton:hover {
     transform: scale(1.1);
     transition: all .3s;
+    box-shadow: 0 0 10px yellowgreen;
 }
 
 .resetButton {
-    flex: 1;
-    height: 100px;
     font-family: Roboto;
     font-size: 30px;
     font-weight: bold;
-    border-color: coral;
-    border-style: revert;
+    color: whitesmoke;
+    background-color: yellowgreen;
     border-radius: 10px;
-    border-width: 10px;
     margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.resetButton:hover {
+    transform: scale(1.1);
+    transition: all .3s;
+    box-shadow: 0 0 10px yellowgreen;
 }
 
 #btnRock {
     background-color: brown;
-    color: #5AD5D5;
+    
 }
 
 #btnPaper {
     background-color: cornsilk;
-    color: #000723;
 }
 
 #btnScissors {
     background-color: cadetblue;
-    color: #A0615F;
 }
 
