--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,9 @@ body {
 #header1 {
     text-align: center;
     font-family: 'Press Start 2P', cursive;
-    color: whitesmoke
+    color: whitesmoke;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 #main {
@@ -57,6 +59,11 @@ body {
 
 .gameButton {
     border-radius: 50px;
+}
+
+img {
+    max-height: 150px;
+    max-width: 150px;
 }
 
 .gameButton:hover {
