--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
     display: flex;
     font-family: Roboto;
     color: whitesmoke;
+    font-size: 20px;
     font-weight: bold;
     
 }
@@ -18,6 +19,7 @@ body {
 #header1 {
     text-align: center;
     font-family: 'Press Start 2P', cursive;
+    font-size: 30px;
     color: whitesmoke;
     padding-left: 20px;
     padding-right: 20px;
