--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,9 @@ html {
 body {
     background-color:darkslategray;
     display: flex;
-    font-family: Roboto;
+    font-family: 'Press Start 2P', cursive;
     color: whitesmoke;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: bold;
     
 }
@@ -29,7 +29,6 @@ body {
     margin: auto;
     display: flex;
     flex-direction: column;   
-    max-width: 700px;
     border-style: solid;
     border-color: yellow;
     box-shadow: 0 0 10px yellowgreen;
@@ -44,17 +43,31 @@ body {
     
 }
 
-#computerChoice {
+.scoreContainer {
     display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
+}
+
+
+.moveDisplay {
+    border-radius: 10px;
+    border-style: solid;
+    border-color: yellow;
+    box-shadow: 0 0 10px yellowgreen;
+    height: 300px;
+    width: 200px;
+    text-align: center;
+    display: flex;
+    align-items: center;
     justify-content: center;
-    height: 150px;
-    padding: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .resultsContainer {
-    height: 100px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
 }
