add animation to win condition

--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,11 @@ body {
     align-items: center;
 }
 
+.gameOver {
+    transform: scale(1.1);
+    color: gold;
+}
+
 .gameButton {
     border-radius: 50px;
 }
